--- a/Shnoozle/Base.lproj/Main.storyboard
+++ b/Shnoozle/Base.lproj/Main.storyboard
@@ -502,7 +502,7 @@
             </objects>
             <point key="canvasLocation" x="1507.5" y="685.5"/>
         </scene>
-        <!--Find FriendsVC-->
+        <!--Find Friends-->
         <scene sceneID="AEx-AA-Weg">
             <objects>
                 <viewController storyboardIdentifier="FindFriendsVC" id="uvg-x5-UNE" customClass="FindFriendsVC" sceneMemberID="viewController">
@@ -526,6 +526,9 @@
                             <searchBar contentMode="redraw" fixedFrame="YES" text="" translatesAutoresizingMaskIntoConstraints="NO" id="vw5-LQ-XXX">
                                 <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="uvg-x5-UNE" id="ch9-ck-BgG"/>
+                                </connections>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="92F-Gh-puk">
                                 <rect key="frame" x="0.0" y="108" width="375" height="495"/>
@@ -580,24 +583,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="CbG-ZZ-0hH">
-                        <nil key="title"/>
+                    <navigationItem key="navigationItem" title="Find Friends" id="CbG-ZZ-0hH">
                         <barButtonItem key="leftBarButtonItem" image="menu.png" id="gYd-GT-9oj">
                             <color key="tintColor" red="1" green="0.094088714729999995" blue="0.1609453528" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="menuTapped:" destination="uvg-x5-UNE" id="NPv-W8-c3e"/>
                             </connections>
                         </barButtonItem>
-                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="fYj-0X-RxP">
-                            <rect key="frame" x="112.5" y="7" width="150" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="Button">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="blaButton:" destination="uvg-x5-UNE" eventType="touchUpInside" id="l77-6F-g09"/>
-                            </connections>
-                        </button>
                         <barButtonItem key="rightBarButtonItem" image="fb.png" id="xZu-ZN-hfp">
                             <connections>
                                 <action selector="fbTapped:" destination="uvg-x5-UNE" id="c5v-pT-y7r"/>
