--- a/Shnoozle/Base.lproj/Main.storyboard
+++ b/Shnoozle/Base.lproj/Main.storyboard
@@ -578,6 +578,10 @@
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="uvg-x5-UNE" id="xg9-PO-XcF"/>
+                                    <outlet property="delegate" destination="uvg-x5-UNE" id="ghd-Mn-P9P"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -599,6 +603,7 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="friendsTable" destination="92F-Gh-puk" id="prb-WB-HOK"/>
                         <outlet property="searchBar" destination="vw5-LQ-XXX" id="gjJ-mD-PbH"/>
                     </connections>
                 </viewController>
